bathsheba fix h2 letter spacing to 0

--- a/css/soe_helper.css
+++ b/css/soe_helper.css
@@ -50,7 +50,7 @@ h2 {
   font-family: "Roboto Slab", serif;
   font-size: 1.6em;
   font-weight: 600;
-  letter-spacing: 0.02em;
+  letter-spacing: 0;
   margin: 1.8em 0 0.5em; }
   /* line 54, ../scss/components/_soe_global.scss */
   h2 a {
