--- a/scss/components/_soe_global.scss
+++ b/scss/components/_soe_global.scss
@@ -48,7 +48,7 @@ h2 {
   font-family: $roboto-slab;
   font-size: em(32px);
   font-weight: 600;
-  letter-spacing: 0.02em;
+  letter-spacing: 0;
   margin: 1.8em 0 0.5em;
 
   a {
